assert(is_win)

declare_args() {
  vs_version = ""
  clang_installed = false
  msvc_installed = false
}

env = exec_script("setup_environment.py",
                  [
                    host_cpu,
                    target_cpu,
                    "$is_winxp",
                  ],
                  "scope")

vs_version = env.VERSION
clang_installed = env.CLANG
msvc_installed = env.MSVC
