assert(is_win)

declare_args() {
  vs_version = 0
}

env = exec_script("setup_environment.py",
                  [
                    "$vs_version",
                    host_cpu,
                    target_cpu,
                    "$is_winxp",
                  ],
                  "scope")

vs_version = env.VERSION
